# opengl_framework

./: .gitignore  CMakeLists.txt  license.txt  readme.md
glad/include/glad/: glad.h
include/opengl_framework/: file.h  matrix.h  program.h  shader.h  shape.h  texture.h  vector.h  window.h
resources/: exemplaryFragmentShader.glsl  exemplaryVertexShader.glsl  exemplary_fragment_shader.glsl  exemplary_vertex_shader.glsl
source/: file.c  glad.c  main.c  matrix.c  program.c  shader.c  shape.c  texture.c  vector.c  window.c  window.h
source/example/: main.c
